tests/semantic/type_system_sum_types2/type_system_sum_types2.err
Error: Undeclared branch in file type_system_sum_types2.dl at line 18
R($Y(-1)). // Undeclared.
--^-----------------------
1 errors generated, evaluation aborted
